nextgenconnect-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: nextgenconnect
spec: {}
status: {}
