mysql-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    app: mysql
    run: mysql
  name: mysql
  namespace: nextgenconnect
spec:
  containers:
  - image: mysql:8.0
    name: mysql
    ports:
    - containerPort: 3306
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
