nextgenconnect-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextgenconnect
  namespace: nextgenconnect
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextgenconnect
  template:
    metadata:
      labels:
        app: nextgenconnect
    spec:
      containers:
      - name: nextgenconnect
        image: docker.io/nextgenhealthcare/connect
        ports:
        - name: http
          containerPort: 8080
        - name: https
          containerPort: 8443
        - name: hl7-test
          containerPort: 9001
