deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: nextgenconnect
spec: {}
status: {}
---
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    app: mysql
    run: mysql
  name: mysql
  namespace: nextgenconnect
spec:
  containers:
  - image: mysql:8.0
    name: mysql
    ports:
    - containerPort: 3306
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: mysql
  name: mysql
  namespace: nextgenconnect
spec:
  ports:
  - port: 3306
    protocol: TCP
  selector:
    app: mysql
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextgenconnect
  namespace: nextgenconnect
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextgenconnect
  template:
    metadata:
      labels:
        app: nextgenconnect
    spec:
      containers:
      - name: nextgenconnect
        image: docker.io/nextgenhealthcare/connect:3.12
        ports:
        - name: http
          containerPort: 8080
        - name: https
          containerPort: 8443
        - name: hl7-test
          containerPort: 9001
        volumeMounts:
        - mountPath: /opt/connect/appdata
          name: nextgenconnect-pvc
      volumes:
      - name: nextgenconnect-pvc
        persistentVolumeClaim:
          claimName: nextgenconnect-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: nextgenconnect
  namespace: nextgenconnect
spec:
  type: LoadBalancer
  selector:
    app: nextgenconnect
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: https
      port: 8443
      targetPort: 8443
      protocol: TCP
    - name: hl7-test
      port: 9001
      targetPort: 9001
      protocol: TCP
