nextgenconnect-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextgenconnect
  namespace: nextgenconnect
spec:
  type: LoadBalancer
  selector:
    app: nextgenconnect
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: https
      port: 8443
      targetPort: 8443
      protocol: TCP
    - name: hl7-test
      port: 9001
      targetPort: 9001
      protocol: TCP
